--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,12 @@ body
 .header .title {
     color: #E0E0E0;
     font-size: 2.2rem;
-}
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+
 
 .navbar
 {
